--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
 
   <!-- audio starts -->
   <audio id="myAudio" loop="loop"
-    src="audio/Vivah 2006 - Hamari Shaadi Mein.mp3"
+    src="audio/Sau_Tarah_Ke_(Dishoom)_-_1080p(MobiMasti.in).mp3"
     type="audio/mp3"></audio>
   <i class="fa fa-music pause"></i>
   <!-- audio end -->
