--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="row align-item-center">
             <div class="home-content">
               <p>We are Getting Married</p>
-              <h1>Harsh & Priya</h1>
+              <h1>Sandeep & Priya</h1>
               <span>23 May 2021</span>
             </div>
           </div>
